[package]
name = "beby-rogue-like"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.19.0" }
rand = "0.10.2"

[features]
# 通常の `cargo run`（PC開発）では dynamic_linking を有効にしてリンクを高速化する。
# iOS など dynamic_linking が使えないターゲットでは `--no-default-features` でビルドする
default = ["dev"]
dev = ["bevy/dynamic_linking"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
